--- a/pom.xml
+++ b/pom.xml
@@ -44,12 +44,13 @@
         please contact the sales department at sales@jahia.com.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.jahia.modules</groupId>
     <artifactId>jahia-modules</artifactId>
-    <version>7.2.0.2</version>
+    <version>7.3.3.0</version>
   </parent>
   <artifactId>dx-base-demo-templates</artifactId>
   <version>2.2.0-SNAPSHOT</version>
@@ -60,11 +61,10 @@
     <connection>scm:git:git@github.com:Jahia/jahia-base-demo-templates.git</connection>
     <developerConnection>scm:git:git@github.com:Jahia/jahia-base-demo-templates.git</developerConnection>
     <url>https://github.com/Jahia/jahia-base-demo-templates</url>
-    <tag>HEAD</tag>
   </scm>
   <properties>
     <jahia-module-type>templatesSet</jahia-module-type>
-    <jahia-depends>bootstrap3-components,bootstrap3-core,default,dx-base-demo-core,font-awesome,calendar,event,facets,grid,jquery,location,bookmarks,news,person,press,rating,search,topstories</jahia-depends>
+    <jahia-depends>bootstrap4-components,bootstrap4-core,default,dx-base-demo-core,font-awesome,calendar,event,facets,grid,jquery,location,bookmarks,news,person,press,rating,search,topstories</jahia-depends>
   </properties>
   <repositories>
     <repository>
